--- a/index.html
+++ b/index.html
@@ -1449,46 +1449,44 @@
                     <div class="slider">
                         <div class="slide-track">
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+                                <img src="img/cup1.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+                                <img src="img/cup2.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+                                <img src="img/cup3.png" height="100" width="250" alt="" />
+                            </div>
+                          
+                            <div class="slide">
+                                <img src="img/cup5.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+                                <img src="img/cup6.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+                                <img src="img/cup7.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+                                <img src="img/cup8.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+                                <img src="img/cup10.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+                                <img src="img/cup11.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+                                <img src="img/cup12.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+                                <img src="img/coffee.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+                                <img src="img/cup13.png" height="100" width="250" alt="" />
                             </div>
                             <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
-                            </div>
-                            <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
-                            </div>
-                            <div class="slide">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+                                <img src="img/cup14.png" height="100" width="250" alt="" />
                             </div>
                         </div>
                     </div>
@@ -1553,7 +1551,7 @@
                             <a href=""><img src="img/logo-viber-2.svg" alt=""></a>
                             <a href="https://t.me/nerf_Vettel"><img src="img/logo-telegram.svg" alt=""></a>
                         </div>
-                    </div>    
+                    </div>
                 </div>
                 <div class="foooter-sm__block">
                     <form action="Thank-page/index.html" class="footer__form ft-sm">
