--- a/index.html
+++ b/index.html
@@ -1642,6 +1642,14 @@ WiFi
 });
 
       </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9WX80K32N6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9WX80K32N6');
+</script>
     <script>
         function up() {
             window.scrollTo({ top: 0, behavior: 'smooth' });
